- switch ward / list on mobile - fixed select issue on android due to use of href="#" instead of href="javascript:;" - page takes 100% height and solid border between main page and left and right menus

--- a/WardBook/web-app/css/ward-book-mobile.css
+++ b/WardBook/web-app/css/ward-book-mobile.css
@@ -1,9 +1,13 @@
 html,
 body {
     overflow-x: hidden; /* Prevent scroll on narrow devices */
+    height: 100%;
+    min-height: 100%;
 }
-body {
-    /*padding-top: 70px;*/
+
+.container {
+    height: 100%;
+    min-height: 100%;
 }
 
 .navbar {
@@ -60,6 +64,11 @@ body {
     .sidebar-offcanvas,
     .col-xs-12 {
         padding: 0px;
+    }
+
+    .row-offcanvas-middle {
+        height: 100%;
+        border: 1px solid #ccc;
     }
 
     .row-offcanvas-middle.left-open {
